--- a/src/stubs/Homestead.yaml
+++ b/src/stubs/Homestead.yaml
@@ -2,7 +2,10 @@
 ip: "192.168.10.10"
 memory: 2048
 cpus: 1
+name: "mongo homestead"
 provider: virtualbox
+box: "misterniall/homestead"
+version: "1.0"
 
 authorize: ~/.ssh/id_rsa.pub
 
